# no-one-survived-server

./: .dockerignore  .env.example  .env.full.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.de.md  README.md  SECURITY.de.md  SECURITY.md  compose.build.yaml  compose.secrets.yaml  compose.yaml  docker-entrypoint.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: integration.yml  publish.yml  validate.yml
config/: Game.ini.example
docs/: ARCHITECTURE.de.md  ARCHITECTURE.md  BACKUP-RESTORE.de.md  BACKUP-RESTORE.md  CONFIGURATION.de.md  CONFIGURATION.md  LOCAL-CI.de.md  LOCAL-CI.md  NETWORKING.de.md  NETWORKING.md  PORTAINER.de.md  PORTAINER.md  TROUBLESHOOTING.de.md  TROUBLESHOOTING.md  UPSTREAM.de.md  UPSTREAM.md  WAKE-AND-SLEEP.de.md  WAKE-AND-SLEEP.md
examples/: README.de.md  README.md  portainer-stack.env.example  portainer-stack.full.env.example  portainer-stack.full.yaml  portainer-stack.yaml
scripts/: backup.sh  integration-test.sh  resolve-image-digest.sh  restore.sh  run-local-ci.ps1  test-image-runtime.sh  test-shell-behavior.sh
src/nos_server/: __init__.py  a2s.py  configuration.py  nosctl.py  (+10 more)
tests/: test_a2s.py  test_apply_configuration.py  test_bug_regressions.py  test_compose_configuration.py  test_configuration.py  test_control.py  test_healthcheck.py  test_ini_merge.py  test_local_ci_retry.py  test_runtime_image.py  test_saved_link.py  test_server_process.py  test_settings.py  test_state.py  test_steamcmd.py  test_supervisor.py  test_update_due.py  test_wake.py  test_wine.py
