[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "nos-dedicated-container"
version = "0.1.0"
description = "Container supervisor for the No One Survived dedicated server"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
authors = [{ name = "dadeeen" }]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = true
